4.0-beta4
 * Add generatetokens script for offline token allocation strategy generation (CASSANDRA-16205)
 * Remove Windows scripts (CASSANDRA-16171)
 * Improve checksumming and compression in protocol V5 (CASSANDRA-15299)
 * Optimised repair streaming improvements (CASSANDRA-16274)
 * Update jctools dependency to 3.1.0 (CASSANDRA-16255)
 * 'SSLEngine closed already' exception on failed outbound connection (CASSANDRA-16277)
 * Drain and/or shutdown might throw because of slow messaging service shutdown (CASSANDRA-16276)
 * Upgrade JNA to 5.6.0, dropping support for <=glibc-2.6 systems (CASSANDRA-16212)
 * Add saved Host IDs to TokenMetadata at startup (CASSANDRA-16246)
 * Ensure that CacheMetrics.requests is picked up by the metric reporter (CASSANDRA-16228)
 * Add a ratelimiter to snapshot creation and deletion (CASSANDRA-13019)
 * Produce consistent tombstone for reads to avoid digest mistmatch (CASSANDRA-15369)
 * Fix SSTableloader issue when restoring a table named backups (CASSANDRA-16235)
 * Invalid serialized size for responses caused by increasing message time by 1ms which caused extra bytes in size calculation (CASSANDRA-16103)
 * Throw BufferOverflowException from DataOutputBuffer for better visibility (CASSANDRA-16214)
 * TLS connections to the storage port on a node without server encryption configured causes java.io.IOException accessing missing keystore (CASSANDRA-16144)
 * Internode messaging catches OOMs and does not rethrow (CASSANDRA-15214)
 * When a table attempts to clean up metrics, it was cleaning up all global table metrics (CASSANDRA-16095)
 * Bring back the accepted encryption protocols list as configurable option (CASSANDRA-13325)
Merged from 3.11:
 * SASI's `max_compaction_flush_memory_in_mb` settings over 100GB revert to default of 1GB (CASSANDRA-16071)
Merged from 3.0:
 * Synchronize transaction logs for JBOD (CASSANDRA-16225)
 * Fix the counting of cells per partition (CASSANDRA-16259)