@@ -1,4 +1,5 @@
 4.0-beta4
+ * Updated default num_tokens from 256 to 16 with associated allocate_tokens_for_local_replication_factor (CASSANDRA-13701)
  * Add generatetokens script for offline token allocation strategy generation (CASSANDRA-16205)
  * Remove Windows scripts (CASSANDRA-16171)
  * Improve checksumming and compression in protocol V5 (CASSANDRA-15299)
